tests/testFiles/semanticErrors/declareobjbeforeuse.meme
ermahgerd a = very testClass3();

wow testClass3 {
  such () {
  }
}
